# interstellaris

./: CHANGELOG.md  Cargo.toml  states.drawio
assets/: READMD.md
scripts/: fmt_derive.py  image_convert.py
src/: lib.rs  main.rs  object_id.rs  states.rs
src/common/: camera.rs  mod.rs  object_id.rs
src/fleet/: mod.rs
src/game_map/: mod.rs
src/game_map/galaxy/: gen.rs  mod.rs
src/game_map/planetary_system/: gen.rs  mod.rs
src/planetary_system/: api.rs  mod.rs
src/ui/: cursor.rs  mod.rs  mouse.rs
src/ui/camera/: mod.rs
src/ui/camera/primary_camera/: free_motion.rs  mod.rs
src/ui/input/: mod.rs  mouse.rs  parsed.rs
src/ui/menu/: background.rs  mod.rs
src/ui/menu/sub_menu/: load_game.rs  mod.rs  new_game.rs
src/ui/menu_ui/: background.rs  configs.rs  load_game_menu.rs  load_game_page.rs  main_menu.rs  main_page.rs  mod.rs  new_game_menu.rs  new_game_page.rs  online_game_menu.rs  online_game_page.rs  settings_menu.rs  settings_page.rs  ui_builder_ext.rs  wallpaper.rs
src/ui/menu_ui/menu_pages/: load_game_page.rs  mod.rs  new_game_page.rs  online_game_page.rs  settings_page.rs
src/ui/menu_ui/sub_menu/: load_game.rs  mod.rs  new_game.rs  online_game.rs  settings.rs
src/ui/settings/: audio.rs  input.rs  mod.rs  ui.rs  video.rs
src/user_interface/: cursor.rs  main_camera.rs  mod.rs  parsed_input.rs  pointer.rs  primary_camera.rs  settings.rs
src/user_interface/camera/: mod.rs
src/user_interface/camera/primary_camera/: free_motion.rs  mod.rs
src/user_interface/menu/: background.rs  main_menu.rs  mod.rs  primary_menu.rs
src/user_interface/menu/main/: mod.rs
src/user_interface/primary_camera/: free_motion.rs  mod.rs
src/user_interface/settings/: audio.rs  input.rs  ui.rs  video.rs
src/utils/: mod.rs  object_id.rs  one_shot_system.rs  random.rs  states.rs
(+8 files in other folders)
