[package]
name = "stellaris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# bevy game engine
bevy = "0.13"
bevy_rapier3d = "*"
bevy_mod_picking = "*"
sickle_ui = { rev = "5a8143f", git = "https://github.com/UmbraLuminosa/sickle_ui" }
bevy_editor_pls = "*"
# rust random
rand = "0.8.5"
rand_pcg = "0.3.1"
# others
uuid = "1.9.1"
