[package]
name = "stellaris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# bevy game engine
bevy = { version = "0.14", features = ["serialize"] }
bevy_mod_picking = "0.20"
sickle_ui = { rev = "ca232db", git = "https://github.com/UmbraLuminosa/sickle_ui" } # ready
# bevy_editor_pls = "*" # waiting support for 0.14
# rust random
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"
# serde
serde = { version = "1.0", features = ["derive"] }
# others
uuid = "1.9"
voronoice = "0.2"
voro_rs = "0.2"
